# libstatemachine

./: .gitignore  CMakeLists.txt  LICENSE
lib_state_machine/: CMakeLists.txt  event_data.h  state.h  state_machine.h
test/: CMakeLists.txt
test/test_state_machine/: CMakeLists.txt  main.cpp  test_state_machine.cpp  test_state_machine.h
